site-wide gtag, add insta, misc updates

--- a/careers.html
+++ b/careers.html
@@ -114,6 +114,9 @@ permalink: /jobs
             <td style="width:50%; padding-right: 3rem; padding-top:25px;"><a href="http://www.iamfromdurango.com/" target=_blank><img src="assets/img/logo_durango_lpc.jpg" class="img-responsive" alt="La Plata County Economic Development Alliance"></a></td>
             <td style="width:50%; padding-right: 2rem; padding-top:25px;"><a href="http://www.esopassociation.org/" target=_blank><img src="assets/img/logo_ESOP_nowords.png" class="img-responsive" alt="ESOP Association"></a></td>
           </tr>
+          <tr>
+            <td colspan="2" style="padding-right: 3rem; padding-top:25px;"><a href="https://news.stoneagetools.com/stoneage-inc-named-in-real-leaders-200-top-impact-companies-list-of-2022/" target=_blank><img src="assets/img/features/RealLeaders_02.png" class="img-responsive" alt="StoneAge named 2022 winner be Real Leaders"></a></td>
+          </tr>
         </table> 
         
       </div>
