--- a/manuals.html
+++ b/manuals.html
@@ -322,6 +322,14 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
+                <td>Compass</td>
+                <td>Formerly ProPositioner/Prop-DBP - Indexing system for the ProDrive</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/PROP-DBP_manual.pdf" target="_blank" class="btn btn-sm">PL 688</a><br><small class="grey">Updated: 08/2020</small></td>
+                <td class="text-center"><a href="/assets/pdf/data-sheets/Compass_brochure.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
+                <td class="text-center"></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
                 <td><a href="/fin-fan-accessory">FF-<em>XX</em></a></td>
                 <td>FIN FAN ACCESSORY<br>Adapts the AutoBox ABX-2L to cleaning fin fan style exchangers</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/FF_manual.pdf" target="_blank" class="btn btn-sm">PL 631</a><br><small class="grey">Updated: 08/2018</small></td>
@@ -403,26 +411,10 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/propositioner">PRO-700-V3</a></td>
+                <td><a href="/prodrain">PRO-700-V3</a></td>
                 <td>ProDrain<br>Drain cleaning with ABX-PRO</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-PRO_manual.pdf" target="_blank" class="btn btn-sm">PL 612</a><br><small class="grey">Updated: 05/2021</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/ProDrain_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
-                <td class="text-center"></td>
-                <td class="text-center"></td>
-              </tr>
-              <tr>
-                <td><a href="/propositioner">PROP-300</a></td>
-                <td>ProPositioner<br>Single-lance positioning for ABX-PRO</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/PROP-300_manual.pdf" target="_blank" class="btn btn-sm">PL 675</a><br><small class="grey">Updated: 01/2021</small></td>
-                <td class="text-center"></td>
-                <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-PRO_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 11/2019</small></td>
-                <td class="text-center"></td>
-              </tr>
-              <tr>
-                <td>PROP-DBP</td>
-                <td>Compass - Domed bundle system for the ProDrive</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/PROP-DBP_manual.pdf" target="_blank" class="btn btn-sm">PL 688</a><br><small class="grey">Updated: 08/2020</small></td>
-                <td class="text-center"></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
               </tr>
