--- a/sentinel-lp/sentinel.html
+++ b/sentinel-lp/sentinel.html
@@ -98,7 +98,7 @@
   <div class="w-layout-grid hero-grid" style="margin-top:88px;">
     <div id="w-node-_7a9390b4-ff4a-7543-57d5-e490bb81577d-866c6dab" data-w-id="7a9390b4-ff4a-7543-57d5-e490bb81577d" style="opacity:0" class="content-block">
       <h1 class="heading-1">Today&#x27;s jobs demand advanced equipment &amp; results.</h1>
-      <p class="p-body"><strong>AUTOBOX 3L with Sentinel Automation Technology</strong> cleans heat exchangers faster, safer, easier, and more precisely.<br></p>
+      <p class="p-body"><strong>AUTOBOX 3L with Sentinel Automation Technology</strong> cleans heat exchangers faster, safer, easier, and more precisely. Get the complete system or convert your existing 3L.<br></p>
       <a href="https://info.stoneagetools.com/l/644393/2020-06-19/22f426" data-featherlight="iframe" data-featherlight-iframe-height="550" data-featherlight-iframe-width="480" data-gtm-event="Schedule Demo Btn Clk" class="btn w-button">Schedule a demo</a>
       <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #sentinel-overview-vid" class="link-block w-inline-block">
         <p class="minicta-icon"></p>
@@ -185,7 +185,7 @@
           </div>
           <div class="card-frame">
             <h3 class="heading-3">Add Sentinel to your equipment fleet</h3>
-            <p class="p-400">Flexible options make it easy to get the Sentinel-enabled AutoBox 3L for your next job</p>
+            <p class="p-400">Get the complete system or convert your existing AutoBox 3L</p>
           </div>
         </div>
         <div id="w-node-_2335f469-1683-32f9-788a-67ad64467a0d-866c6dab" data-w-id="2335f469-1683-32f9-788a-67ad64467a0d" style="opacity:0" class="card">
