--- a/waterblast-automation/propositioner.html
+++ b/waterblast-automation/propositioner.html
@@ -140,12 +140,18 @@ master-slider: yes
 
       <!-- Manuals/Docs -->
       <section id="section-bar-2">
-        <div class="col-sm-8">
+        <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Manuals</h3>
             <li><a href="/assets/pdf/manuals/PROP-DBP_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Compass (Prop-DBP) Manual</a></li>
             <li><a href="/assets/pdf/manuals/ABX-PRO_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-PRO (ProDrive) Manual</a></li>
             <li><a href="/assets/pdf/manuals/PROP-300_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Control Box (Prop-300) Manual</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-4">
+          <ul class="list-unstyled basic">
+            <h3>Documentation</h3>
+            <li><a href="/assets/pdf/data-sheets/Compass_brochure.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Compass Brochure</a></li>
           </ul>
         </div>
         <aside class="col-sm-3 col-sm-offset-1 aside-box">
