--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ landing: yes
 <!-- masterslider -->
 <div class="master-slider ms-skin-default" id="homeslider">
   
-  <!-- new slide -->
+  <!-- new slide
   <div class="ms-slide slide-4">
     <img src="/assets/img/features/bg_blue_wwett22.jpg" data-src="/assets/img/features/bg_blue_wwett22.jpg" alt="StoneAge background"/> 
 
@@ -470,10 +470,11 @@ landing: yes
     </div>
     
     <div class="row" style="margin-top:25px;">
-      <a href="https://www.wwettshow.com/en/home.html" target="_blank"><img src="/assets/img/thumb/upcoming-events-wwett-2022.jpg" class="img-responsive"/ alt="WWETT 2022"></a>
+      <a href="https://ifat.de/en/" target="_blank"><img src="/assets/img/thumb/upcoming_events_ifat_2020.jpg" class="img-responsive"/ alt="IFAT 2022"></a>
       <div class="caption text-center">
         <h4>
-          <span class="small"><strong><a href="https://www.wwettshow.com/en/home.html" target="_blank">WWETT 22</a></strong><br>February 21-24, 2022<br>Indiana Convention Center</span></h4>
+          <span class="small"><strong><a href="https://ifat.de/en/" target="_blank">IFAT 2022</a></strong><br>May 30-June 3, 2022<br>Messe München<br>
+          Munich, Germany</span></h4>
       </div>
     </div>
     
