--- a/manuals.html
+++ b/manuals.html
@@ -60,7 +60,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/abx-2l">ABX-2L-B-V2</a><br></td>
                 <td>AUTOBOX 2L<br>Hose tractor for dual flex lancing of exchanger tube IDs</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L-B-V2_manual.pdf" target="_blank" class="btn btn-sm">PL 673</a><br><small class="grey">Updated: 11/2021</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L-B-V2_manual.pdf" target="_blank" class="btn btn-sm">PL 673</a><br><small class="grey">Updated: 02/2022</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/ABX-2L_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-2L-B-V2_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 11/2021</small></td>
                 <td class="text-center"></td>
@@ -68,7 +68,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/abx-3l">ABX-3L-V3</a><br></td>
                 <td>AUTOBOX 3L<br>Hose tractor for triple flex lancing of exchanger tube IDs </td>
-                <td class="text-center"><a href="/assets/pdf/manuals/ABX-3L-V3_manual.pdf" target="_blank" class="btn btn-sm">PL 702</a><br><small class="grey">Updated: 09/2021</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABX-3L-V3_manual.pdf" target="_blank" class="btn btn-sm">PL 702</a><br><small class="grey">Updated: 02/2022</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/Sentinel_brochure.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 01/2022</small></td>
                 <td class="text-center"></td>
@@ -76,7 +76,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/abx-3l">ABXS-3L</a><br></td>
                 <td>AUTOBOX 3L with Sentinel Automation Technology<br>Sentinel-enabled hose tractor for triple flex lancing of exchanger tube IDs</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/ABXS-3L_manual.pdf" target="_blank" class="btn btn-sm">PL 693</a><br><small class="grey">Updated: 09/2021</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABXS-3L_manual.pdf" target="_blank" class="btn btn-sm">PL 693</a><br><small class="grey">Updated: 02/2022</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/Sentinel_brochure.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
 <!--                <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2018</small></td>-->
                 <td class="text-center"></td>
@@ -324,7 +324,9 @@ permalink: /manuals
               <tr>
                 <td>Compass</td>
                 <td>Formerly ProPositioner/Prop-DBP - Indexing system for the ProDrive</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/PROP-DBP_manual.pdf" target="_blank" class="btn btn-sm">PL 688</a><br><small class="grey">Updated: 08/2020</small></td>
+                <td class="text-center">
+<!--                  <a href="/assets/pdf/manuals/PROP-DBP_manual.pdf" target="_blank" class="btn btn-sm">PL 688</a><br><small class="grey">Updated: 08/2020</small>-->
+                </td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/Compass_brochure.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
