--- a/waterblast-automation/compass.html
+++ b/waterblast-automation/compass.html
@@ -143,7 +143,7 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Manuals</h3>
-            <li><a href="/assets/pdf/manuals/PROP-DBP_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Compass (Prop-DBP) Manual</a></li>
+<!--            <li><a href="/assets/pdf/manuals/PROP-DBP_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Compass (Prop-DBP) Manual</a></li>-->
             <li><a href="/assets/pdf/manuals/ABX-PRO_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-PRO (ProDrive) Manual</a></li>
             <li><a href="/assets/pdf/manuals/PROP-300_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Control Box (Prop-300) Manual</a></li>
           </ul>
