podcast episode 22 - compass

--- a/index.html
+++ b/index.html
@@ -533,9 +533,9 @@ landing: yes
     <div class="section-heading">
       <h2>Featured Story</h2>
     </div>
-    <a href="/21-tom-costabile">
-      <img src="assets/img/podcast/episode-21-tom-costabile.jpg" alt="Episode 21 - Why Engineering is an Ideal Career Path with Tom Costabile" class="img-responsive" />
-      <p style="padding-top: 10px;"><strong>Industrial Theory Podcast Episode 21</strong><br><span class="grey">Tom Costabile: Why Engineering is an Ideal Career Path</span></p>
+    <a href="/22-compass">
+      <img src="assets/img/podcast/episode-22-mike-and-kelley.jpg" alt="Episode 22 - The Swiss Army Knife of Heat Exchanger Cleaning with Mike Taylor and Kelley Crush" class="img-responsive" />
+      <p style="padding-top: 10px;"><strong>Industrial Theory Podcast Episode 22</strong><br><span class="grey">Mike Taylor and Kelley Crush: The "Swiss Army Knife" of Heat Exchanger Cleaning</span></p>
     </a>
     <div class="section-heading margin-top-30">
       <h2>Mobile App</h2>
