--- a/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
@@ -261,17 +261,7 @@ master-slider: yes
                 </div>
                 <!-- End Lightbox call -->
                 <p class="caption">2" Badger Overview Video</p>
-              </div>
-              <div class="col-sm-4 col-centered">
-                <!-- Lightbox call -->
-                <div>
-                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #badger2-maint-vid">
-                    <img src="/assets/vid/thumb/badger2-maint-vid.png" alt="2-inch Badger Maintenance Video" class="img-responsive" />
-                  </a>
-                </div>
-                <!-- End Lightbox call -->
-                <p class="caption">2" Badger Maintenance Video</p>
-              </div>
+              </div> 
               <div class="col-sm-4 col-centered">
                 <!-- Lightbox call -->
                 <div>
@@ -280,7 +270,7 @@ master-slider: yes
                   </a>
                 </div>
                 <!-- End Lightbox call -->
-                <p class="caption">Locking Head Video</p>
+                <p class="caption">2" Badger Maintenance (Locking Head)</p>
               </div>
             </div>
           </section>
