misc updates, Compass verbiage

--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -272,11 +272,11 @@ permalink: /waterblast-tools-automated-equipment
       <a href="/compass" class="search-text">
         <img src="/assets/img/product/propositioner-01.jpg" class="img-responsive" />
         <h3>Compass</h3>
-        <h5>Formerly known as ProPositioner</h5>
+        <h5>Radial Indexer for ABX-PRO</h5>
         <table class="table">
           <tbody>
             <tr>
-              <th colspan="2" style="text-align:center;">Ultra-portable indexing for single-lance tube cleaning</th>
+              <th colspan="2" style="text-align:center;">Formerly known as ProPositioner &amp; PROP-DBP</th>
             </tr>
             <tr>
               <td colspan="2" style="text-align:center;">Quick to set up and easy to use</td>
@@ -285,7 +285,6 @@ permalink: /waterblast-tools-automated-equipment
         </table>
         <button>View Details</button>
       </a>
-    </div>
     </div>
 
     <div class="mix exchanger-cleaning accessories" data-name="fin-fan" data-designation="automated">
