HMS, IFAT, misc updates

--- a/careers.html
+++ b/careers.html
@@ -136,7 +136,7 @@ permalink: /jobs
                 <a href="https://stoneagetools.com/durango-headquarters"><img alt="StoneAge Headquarters" border="10" height="276" src="https://www2.stoneagetools.com/l/644393/2019-07-10/8d4hv/644393/56391/DGO_team.jpg" style="margin: 15px auto; border: 10px solid rgb(255, 255, 255);" class="img-responsive">
                 <h2>StoneAge Headquarters</h2></a>
                 
-                <a href="https://stoneagetools.com/ohio"><img alt="StoneAge Ohio" border="10" height="276" src="https://www2.stoneagetools.com/l/644393/2019-07-10/8d4hg/644393/56389/Ohio_team.jpg"  style="margin: 15px auto; border: 10px solid rgb(255, 255, 255);" class="img-responsive">
+                <a href="https://stoneagetools.com/ohio"><img alt="StoneAge Ohio" border="10" height="276" src="/assets/img/Ohio-team-2022.jpg"  style="margin: 15px auto; border: 10px solid rgb(255, 255, 255);" class="img-responsive">
                 <h2>StoneAge OH</h2></a>
               </div>
             </div>
