--- a/ifat-2022/visit-stoneage.html
+++ b/ifat-2022/visit-stoneage.html
@@ -56,24 +56,24 @@
           <div class="feature-item-container">
             <div class="feature-icon"><img src="images/thumb-sentinel-03.jpg" loading="lazy" sizes="(max-width: 479px) 66vw, (max-width: 767px) 578px, (max-width: 802px) 72vw, (max-width: 991px) 37vw, 39vw" srcset="images/thumb-sentinel-03-p-500.jpeg 500w, images/thumb-sentinel-03.jpg 578w" alt=""></div>
             <h3 class="feature-header">AutoBox 3L with Sentinel Automation Technology</h3><img src="images/download-solid.svg" loading="lazy" width="15" alt="" class="download-icon">
-            <a href="#" target="_blank" class="feature-description">Download Brochure</a>
+            <a href="https://stoneagetools.com/assets/pdf/data-sheets/Sentinel_brochure_02.pdf" target="_blank" class="feature-description">Download Brochure</a>
           </div>
           <div class="feature-item-container">
-            <div class="feature-icon"><img src="images/thumb-hms-01.jpg" loading="lazy" sizes="(max-width: 479px) 66vw, (max-width: 767px) 578px, (max-width: 802px) 72vw, (max-width: 991px) 37vw, 39vw" srcset="images/thumb-hms-01-p-500.jpeg 500w, images/thumb-hms-01.jpg 578w" alt=""></div>
+            <div class="feature-icon"><img ssrc="https://www.stoneagetools.com/assets/img/product/hms-06.jpg" loading="lazy" sizes="(max-width: 479px) 66vw, (max-width: 767px) 578px, (max-width: 802px) 72vw, (max-width: 991px) 37vw, 39vw" srcset="https://www.stoneagetools.com/assets/img/product/hms-06.jpg 500w, https://www.stoneagetools.com/assets/img/product/hms-06.jpg 578w" alt=""></div>
             <h3 class="feature-header">Hose Management System</h3><img src="images/download-solid.svg" loading="lazy" width="15" alt="" class="download-icon">
-            <a href="#" target="_blank" class="feature-description">Download Brochure</a>
+            <a href="https://www.stoneagetools.com/assets/pdf/data-sheets/HMS_brochure.pdf" target="_blank" class="feature-description">Download Brochure</a>
           </div>
         </div>
         <div class="w-col w-col-6">
           <div class="feature-item-container">
             <div class="feature-icon"><img src="images/thumb-compass-01.jpg" loading="lazy" sizes="(max-width: 479px) 66vw, (max-width: 767px) 578px, (max-width: 802px) 72vw, (max-width: 991px) 37vw, 39vw" srcset="images/thumb-compass-01-p-500.jpeg 500w, images/thumb-compass-01.jpg 578w" alt=""></div>
             <h3 class="feature-header">Compass Radial Indexer for AutoBox ABX-PRO</h3><img src="images/download-solid.svg" loading="lazy" width="15" height="25" alt="" class="download-icon">
-            <a href="#" target="_blank" class="feature-description">Download brochure</a>
+            <a href="https://www.stoneagetools.com/assets/pdf/data-sheets/Compass_brochure.pdf" target="_blank" class="feature-description">Download brochure</a>
           </div>
           <div class="feature-item-container">
-            <div class="feature-icon"><img src="images/thumb-turbo-01.jpg" loading="lazy" sizes="(max-width: 479px) 66vw, (max-width: 767px) 578px, (max-width: 802px) 72vw, (max-width: 991px) 37vw, 39vw" srcset="images/thumb-turbo-01-p-500.jpeg 500w, images/thumb-turbo-01.jpg 578w" alt=""></div>
-            <h3 class="feature-header">Warthog Turbo Pro</h3><img src="images/download-solid.svg" loading="lazy" width="15" alt="" class="download-icon">
-            <a href="#" target="_blank" class="feature-description">Download brochure</a>
+            <div class="feature-icon"><img src="https://www.stoneagetools.com/assets/img/product/turbo-01.jpg" loading="lazy" sizes="(max-width: 479px) 66vw, (max-width: 767px) 578px, (max-width: 802px) 72vw, (max-width: 991px) 37vw, 39vw" srcset="https://www.stoneagetools.com/assets/img/product/turbo-01.jpg 500w, https://www.stoneagetools.com/assets/img/product/turbo-01.jpg 578w" alt=""></div>
+            <h3 class="feature-header">Warthog Turbo</h3><img src="images/download-solid.svg" loading="lazy" width="15" alt="" class="download-icon">
+            <a href="https://www.stoneagetools.com/assets/pdf/data-sheets/Warthog_Turbo_brochure.pdf" target="_blank" class="feature-description">Download brochure</a>
           </div>
         </div>
       </div>
@@ -83,14 +83,14 @@
           <div class="feature-item-container">
             <div class="feature-icon"><img src="images/catalog_cover_wb_2022.jpeg" loading="lazy" sizes="(max-width: 479px) 66vw, (max-width: 767px) 577px, (max-width: 801px) 72vw, (max-width: 991px) 37vw, 39vw" srcset="images/catalog_cover_wb_2022-p-500.jpeg 500w, images/catalog_cover_wb_2022.jpeg 577w" alt=""></div>
             <h3 class="feature-header">Waterblast Tools &amp; Equipment</h3><img src="images/download-solid.svg" loading="lazy" width="15" alt="" class="download-icon">
-            <a href="#" target="_blank" class="feature-description">Download Catalog</a>
+            <a href="https://www.stoneagetools.com/assets/pdf/catalogs/waterblast_2022/202201%20Catalog%20Spreads%20for%20Web.pdf" target="_blank" class="feature-description">Download Catalog</a>
           </div>
         </div>
         <div class="w-col w-col-6">
           <div class="feature-item-container">
-            <div class="feature-icon"><img src="images/catalog_cover_sewer_2022.jpg" loading="lazy" sizes="(max-width: 479px) 66vw, (max-width: 767px) 79vw, (max-width: 991px) 37vw, 39vw" srcset="images/catalog_cover_sewer_2022.jpg 500w, images/catalog_cover_sewer_2022.jpg 699w" alt="" class="image-3"></div>
+            <div class="feature-icon"><img src="https://www.stoneagetools.com/assets/img/catalog_cover_sewer_2022.jpg" loading="lazy" sizes="(max-width: 479px) 66vw, (max-width: 767px) 79vw, (max-width: 991px) 37vw, 39vw" srcset="https://www.stoneagetools.com/assets/img/catalog_cover_sewer_2022.jpg 500w, https://www.stoneagetools.com/assets/img/catalog_cover_sewer_2022.jpg 699w" alt="" class="image-3"></div>
             <h3 class="feature-header">Warthog Sewer Tools</h3><img src="images/download-solid.svg" loading="lazy" width="15" alt="" class="download-icon">
-            <a href="#" target="_blank" class="feature-description">Download Catalog</a>
+            <a href="https://www.stoneagetools.com/assets/pdf/catalogs/sewer_2022/warthog_catalog_2022.pdf" target="_blank" class="feature-description">Download Catalog</a>
           </div>
         </div>
       </div>
@@ -107,7 +107,8 @@
           <div class="feature-item-container">
             <div class="feature-icon"><img src="images/thumb-training-01.jpg" loading="lazy" sizes="(max-width: 479px) 66vw, (max-width: 767px) 578px, (max-width: 802px) 72vw, (max-width: 991px) 21vw, 23vw" srcset="images/thumb-training-01-p-500.jpeg 500w, images/thumb-training-01.jpg 578w" alt=""></div>
             <h3 class="feature-header">StoneAge Training</h3>
-            <a href="https://www.stoneagetraining.com/" target="_blank" class="feature-description">More information</a><img src="images/angles-right-solid.svg" loading="lazy" width="15" height="12" alt="" class="info-icon">
+            <a href="https://www.stoneagetraining.com/" target="_blank" class="feature-description">More information</a><img src="images/angles-right-solid.svg" loading="lazy" width="15" height="12" alt="" class="info-icon"><br>
+            <a href="https://www.stoneagetools.com/assets/pdf/data-sheets/StoneAge_Training_Course_Catalog.pdf" target="_blank" class="feature-description">Download brochure</a>&nbsp;<img src="images/download-solid.svg" loading="lazy" width="15" alt="" class="download-icon">
           </div>
         </div>
         <div class="w-col w-col-4">
