--- a/ifat-2022/what-language.html
+++ b/ifat-2022/what-language.html
@@ -34,16 +34,16 @@
         <a id="w-node-_40dda4df-0ac1-e379-5369-8c24d18314a9-b4620a9d" href="https://stoneagetools.com/ifat-2022/visit-stoneage.html" class="language-block w-inline-block" style="text-decoration: none;">
           <div class="text-block-4">EN</div>
         </a>
-        <a id="w-node-_310985ee-8f12-939d-b112-ea67e4ba8f34-b4620a9d" href="#" class="language-block w-inline-block" style="text-decoration: none;">
+        <a id="w-node-_310985ee-8f12-939d-b112-ea67e4ba8f34-b4620a9d" href="https://de.stoneagetools.com/ifat-2022/visit-stoneage.html" class="language-block w-inline-block" style="text-decoration: none;">
           <div class="text-block-4">DE</div>
         </a>
-        <a id="w-node-a6023dbf-d9f7-8685-8341-a794c77cf566-b4620a9d" href="#" class="language-block w-inline-block" style="text-decoration: none;">
+        <a id="w-node-a6023dbf-d9f7-8685-8341-a794c77cf566-b4620a9d" href="https://fr.stoneagetools.com/ifat-2022/visit-stoneage.html" class="language-block w-inline-block" style="text-decoration: none;">
           <div class="text-block-4">FR</div>
         </a>
-        <a id="w-node-b75e759b-b071-767d-337a-81d8483b3f73-b4620a9d" href="#" class="language-block w-inline-block" style="text-decoration: none;">
+        <a id="w-node-b75e759b-b071-767d-337a-81d8483b3f73-b4620a9d" href="https://nl.stoneagetools.com/ifat-2022/visit-stoneage.html" class="language-block w-inline-block" style="text-decoration: none;">
           <div class="text-block-4">NL</div>
         </a>
-        <a id="w-node-_8d7416f4-642e-9795-c76f-3e922ae10cf8-b4620a9d" href="#" class="language-block w-inline-block" style="text-decoration: none;">
+        <a id="w-node-_8d7416f4-642e-9795-c76f-3e922ae10cf8-b4620a9d" href="https://es.stoneagetools.com/ifat-2022/visit-stoneage.html" class="language-block w-inline-block" style="text-decoration: none;">
           <div class="text-block-4">ES</div>
         </a>
       </div>
