--- a/index.html
+++ b/index.html
@@ -531,9 +531,9 @@ landing: yes
     <div class="section-heading">
       <h2>Featured Story</h2>
     </div>
-    <a href="/23-peeters">
-      <img src="assets/img/podcast/episode-23-marco-van-der-laan.jpg" alt="Episode 23 - How the Sentinel Cleaned Exchangers Four Times Faster with Marco van der Laan" class="img-responsive" />
-      <p style="padding-top: 10px;"><strong>Industrial Theory Podcast Episode 23</strong><br><span class="grey">Marco van der Laan: How the Sentinel Cleaned Exchangers Four Times Faster</span></p>
+    <a href="/24-philipp-eisenmann">
+      <img src="assets/img/podcast/episode-24-philipp-eisenmann.jpg" alt="Episode 24 - Philipp Eisenmann: What to Expect at IFAT 2022" class="img-responsive" />
+      <p style="padding-top: 10px;"><strong>Industrial Theory Podcast Episode 24</strong><br><span class="grey">Philipp Eisenmann: What to Expect at IFAT 2022</span></p>
     </a>
     <div class="section-heading margin-top-30">
       <h2>Mobile App</h2>
