--- a/manuals.html
+++ b/manuals.html
@@ -360,7 +360,7 @@ permalink: /manuals
               </tr>
               <tr>
                 <td><a href="/hose-containment">HCS-2L</a></td>
-                <td>HOSE CONTAINMENT SYSTEM<br>For AutoBox ABX-2L</td>
+                <td>hose management SYSTEM<br>For AutoBox ABX-2L</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/HCS-2L_Manual.pdf" target="_blank" class="btn btn-sm">PL 659</a><br><small class="grey">Updated: 06/2020</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/HCS_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/HCS_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 03/2018</small></td>
@@ -368,7 +368,7 @@ permalink: /manuals
               </tr>
               <tr>
                 <td><a href="/hose-containment">HCS-3L</a></td>
-                <td>HOSE CONTAINMENT SYSTEM<br>For AutoBox ABX-3L &nbsp; ABX-3L</td>
+                <td>Hose Containment SYSTEM<br>For AutoBox ABX-3L &nbsp; ABX-3L</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/HCS-3L_Manual.pdf" target="_blank" class="btn btn-sm">PL 658</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/HCS_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/HCS_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 03/2018</small></td>
@@ -376,7 +376,7 @@ permalink: /manuals
               </tr>
               <tr>
                 <td><a href="/hose-containment">HCS-PRO</a></td>
-                <td>HOSE CONTAINMENT SYSTEM<br>For AutoBox ABX-PRO</td>
+                <td>Hose Containment SYSTEM<br>For AutoBox ABX-PRO</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/HCS-PRO_Manual.pdf" target="_blank" class="btn btn-sm">PL 661</a><br><small class="grey">Updated: 06/2020</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/HCS_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/HCS_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2019</small></td>
@@ -865,10 +865,10 @@ permalink: /manuals
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_HC.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
-                <td>HCS</td>
-                <td>Hose Containment System model iteration</td>
+                <td>HMS</td>
+                <td>hose management System model iteration</td>
                 <td class="text-center"></td>
-                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_HCS.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_HMS.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>HI-P6, HI-M9</td>
