--- a/product-catalogs.html
+++ b/product-catalogs.html
@@ -17,7 +17,7 @@ master-slider: yes
   <div class="col-sm-6">
     <div class="row margin-bottom-30">
       <a href="assets/pdf/catalogs/waterblast_2022/2022_WB_Catalog_Web.pdf" target="_blank" title="2022 StoneAge Waterblast Tools Catalog"><img src="assets/img/catalog_cover_wb_2022.jpg" style="max-height:500px;" class="img-responsive" alt="2022 StoneAge Waterblast Tools Catalog"></a>
-      <h3><span style="display:inline-block; background:#efefef; color: #444; padding:0 6px; font-weight:bold; transform: skew(-15deg);">NEW!</span> 2022 Waterblast Tools</h3>
+     <h3><!-- <span style="display:inline-block; background:#efefef; color: #444; padding:0 6px; font-weight:bold; transform: skew(-15deg);">NEW!</span>--> 2022 Waterblast Tools</h3>
       <p>
         <a href="assets/pdf/catalogs/waterblast_2022/202201%20Catalog%20Spreads%20for%20Web.pdf" target="_blank" title="2022 StoneAge Waterblast Tools Catalog"><i class="fa fa-download" aria-hidden="true"></i> Download the Waterblast Tools Catalog</a> <small class="grey"><em>  (Allow time to download)</em></small><br/>
         <a href="/request-catalog"><i class="fa fa-book" aria-hidden="true"></i> Request a printed copy</a></p>
@@ -331,9 +331,9 @@ master-slider: yes
   <!-- Sewer Catalog -->
   <div class="col-sm-6">
     <div class="row margin-bottom-30">
-      <a href="assets/pdf/catalogs/sewer_2020/2020_warthog_catalog_web.pdf" target="_blank" title="2020 StoneAge Warthog Sewer Tools Catalog"><img src="assets/img/catalog_cover_sewer_2020.jpg" class="img-responsive" style="max-height:500px;" alt="2020 StoneAge Warthog Sewer Tools Catalog"></a>
-      <h3>2020 Warthog Sewer Tools<br><br></h3>
-      <p><a href="assets/pdf/catalogs/sewer_2020/2020_warthog_catalog_web.pdf" target="_blank" title="20120 StoneAge Warthog Sewer Tools Catalog"><i class="fa fa-download" aria-hidden="true"></i> Download the Sewer Tools Catalog</a><br/>
+      <a href="assets/pdf/catalogs/sewer_2022/warthog_catalog_2022.pdf" target="_blank" title="2022 StoneAge Warthog Sewer Tools Catalog"><img src="assets/img/catalog_cover_sewer_2022.jpg" class="img-responsive" style="max-height:500px;" alt="2022 StoneAge Warthog Sewer Tools Catalog"></a>
+      <h3>2022 Warthog Sewer Tools</h3>
+      <p><a href="assets/pdf/catalogs/sewer_2022/warthog_catalog_2022.pdf" target="_blank" title="2022 StoneAge Warthog Sewer Tools Catalog"><i class="fa fa-download" aria-hidden="true"></i> Download the Sewer Tools Catalog</a><br/>
         <a href="/request-catalog"><i class="fa fa-book" aria-hidden="true"></i> Request a printed copy</a></p>
       <p>
         <a href="/assets/pdf/catalogs/sewer_2019/2019_warthog_catalog_web-NL.pdf" target="_blank" data-toggle="tooltip" title="Dutch"><img src="/assets/img/icon-Dutch-flag.png" alt="Dutch" title="Dutch" style="width:32px;" /></a> &nbsp;
