--- a/rotary-waterblast-tools/backout-prevention.html
+++ b/rotary-waterblast-tools/backout-prevention.html
@@ -132,12 +132,12 @@ master-slider: yes
               <tr>
                 <th>Pipe Size</th>
                 <td>2–6 in.</td>
-                <td><span class="metric">51–150 mm</span
-              ></tr>
+                <td><span class="metric">51–150 mm</span>
+              </tr>
               <tr>
-                <th>Hose OD</th>
-                <td>0.3–0.7 in.</td>
-                <td><span class="metric">8–18 mm</span></td>
+                <th>Maximum Tool OD</th>
+                <td>1.5 in.</td>
+                <td><span class="metric">38 mm</span></td>
               </tr>
               <tr>
                 <th>Description</th>
@@ -157,12 +157,12 @@ master-slider: yes
               <tr>
                 <th>Pipe Size</th>
                 <td>4–8 in.</td>
-                <td><span class="metric">100–200 mm</span
-              ></tr>
+                <td><span class="metric">100–200 mm</span>
+              </tr>
               <tr>
-                <th>Hose OD</th>
-                <td>0.3–1.5 in.</td>
-                <td><span class="metric">8–38 mm</span></td>
+                <th>Maximum Tool OD</th>
+                <td>1.5 in.</td>
+                <td><span class="metric">38 mm</span></td>
               </tr>
               <tr>
                 <th>Description</th>
@@ -182,12 +182,12 @@ master-slider: yes
               <tr>
                 <th>Pipe Size</th>
                 <td>5–17 in.</td>
-                <td><span class="metric">130–430 mm</span
-              ></tr>
+                <td><span class="metric">130–430 mm</span>
+              </tr>
               <tr>
-                <th>Hose OD</th>
-                <td>0.3–1.5 in.</td>
-                <td><span class="metric">8–38 mm</span></td>
+                <th>Maximum Tool OD</th>
+                <td>1.5 in.</td>
+                <td><span class="metric">38 mm</span></td>
               </tr>
               <tr>
                 <th>Description</th>
@@ -207,11 +207,12 @@ master-slider: yes
               <tr>
                 <th>Pipe Size</th>
                 <td>15–36 in.</td>
-                <td><span class="metric">380–910 mm</span
-              ></tr>
+                <td><span class="metric">380–910 mm</span>
+              </tr>
               <tr>
-                <th>Hose OD</th>
-                <td colspan="2">N/A</td>
+                <th>Maximum Tool OD</th>
+                <td>1.5 in.</td>
+                <td><span class="metric">38 mm</span></td>
               </tr>
               <tr>
                 <th>Description</th>
@@ -231,11 +232,12 @@ master-slider: yes
               <tr>
                 <th>Pipe Size</th>
                 <td>8–36 in.</td>
-                <td><span class="metric">130–910 mm</span
-              ></tr>
+                <td><span class="metric">130–910 mm</span>
+              </tr>
               <tr>
-                <th>Hose OD</th>
-                <td colspan="2">N/A</td>
+                <th>Maximum Tool OD</th>
+                <td>1.5 in.</td>
+                <td><span class="metric">38 mm</span></td>
               </tr>
               <tr>
                 <th>Description</th>
