--- a/safety-data-sheets.html
+++ b/safety-data-sheets.html
@@ -13,7 +13,7 @@ permalink: /sds
 
 <section class="container padding-tb-30">
   <div class="col-sm-7">
-    <p class="grey description">The OSHA Hazard Communication Standard (HCS) requires chemical manufacturers, distributors, or importers to provide Safety Brochures (SDSs) (formerly known as Material Safety Brochures or MSDSs) to communicate the hazards of hazardous chemical products.</p>      
+    <p class="grey description">The OSHA Hazard Communication Standard (HMS) requires chemical manufacturers, distributors, or importers to provide Safety Brochures (SDSs) (formerly known as Material Safety Brochures or MSDSs) to communicate the hazards of hazardous chemical products.</p>      
   <p><em>Employers must ensure that SDSs are readily accessible to employees.<br>For more information: <a href="http://www.osha.gov">www.osha.gov</a></em></p>
   </div>
 </section>
