--- a/waterblast-automation/autobox-abx-2l-02.html
+++ b/waterblast-automation/autobox-abx-2l-02.html
@@ -78,7 +78,7 @@ master-slider: yes
       </ul>
       
       <div class="accessories">
-        <h3>Compatible with:</h3> <a class="btn" href="/lightweight-positioner" data-toggle="tooltip" title="Lightweight Positioner">LWP</a> <a class="btn" href="/hose-containment" data-toggle="tooltip" title="Hose Containment System">HCS</a> <a class="btn" href="/fin-fan-accessory" data-toggle="tooltip" title="Fin Fan Accessory">FF</a> <a class="btn" href="/autostroke" data-toggle="tooltip" title="AutoStroke">AST</a> <a class="btn" href="/banshee" data-toggle="tooltip" title="Banshee">BN</a>
+        <h3>Compatible with:</h3> <a class="btn" href="/lightweight-positioner" data-toggle="tooltip" title="Lightweight Positioner">LWP</a> <a class="btn" href="/hose-containment" data-toggle="tooltip" title="hose management System">HMS</a> <a class="btn" href="/fin-fan-accessory" data-toggle="tooltip" title="Fin Fan Accessory">FF</a> <a class="btn" href="/autostroke" data-toggle="tooltip" title="AutoStroke">AST</a> <a class="btn" href="/banshee" data-toggle="tooltip" title="Banshee">BN</a>
       </div>
 
       <!-- Quote Request -->
@@ -454,8 +454,8 @@ master-slider: yes
         <h5>AutoStroke</h5></a>
       </div>
       <div class="item">
-        <a href="/hose-containment"><img src="/assets/img/product/thumb-hcs-01.jpg" alt="Hose containment for exchanger cleaning">
-        <h5>Hose Containment System</h5></a>
+        <a href="/hose-containment"><img src="/assets/img/product/thumb-hcs-01.jpg" alt="hose management for exchanger cleaning">
+        <h5>hose management System</h5></a>
       </div>
       <div class="item">
         <a href="/abx-pro"><img src="/assets/img/product/thumb-abx-pro-02.jpg" alt="AutoBox ABX-PRO">
