--- a/waterblast-automation/boiler-tube-cleaner.html
+++ b/waterblast-automation/boiler-tube-cleaner.html
@@ -65,7 +65,7 @@ master-slider: yes
         <li>Utilizes <a href="/abx-pro">AutoBox ABX-PRO hose drive system</a></li>
         <li>Pairs with StoneAge rotary pipe and tube cleaning tools</li>
         <li>Integrated camera system simplifies tube indexing</li>
-        <li>Hose containment drum for job site safety and prolonged hose life</li>
+        <li>hose management drum for job site safety and prolonged hose life</li>
         <li>Can be adapted to clean other types of boilers </li>
       </ul>
       
