--- a/waterblast-automation/fin-fan-accessory.html
+++ b/waterblast-automation/fin-fan-accessory.html
@@ -223,8 +223,8 @@ master-slider: yes
         <h5>Lightweight Positioner</h5></a>
       </div>
       <div class="item">
-        <a href="/hose-containment"><img src="/assets/img/product/thumb-hcs-01.jpg" alt="Hose containment for exchanger cleaning">
-        <h5>Hose Containment System</h5></a>
+        <a href="/hose-containment"><img src="/assets/img/product/thumb-hcs-01.jpg" alt="hose management for exchanger cleaning">
+        <h5>hose management System</h5></a>
       </div>
       <div class="item">
         <a href="/abx-pro"><img src="/assets/img/product/thumb-abx-pro-02.jpg" alt="AutoBox ABX-PRO">
