--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -307,10 +307,10 @@ permalink: /waterblast-tools-automated-equipment
       </a>
     </div>
 
-    <div class="mix exchanger-cleaning accessories" data-name="hose-containment" data-designation="automated">
-      <a href="/hose-containment" class="search-text">
-        <img src="/assets/img/product/hcs-13.jpg" class="img-responsive" />
-        <h3>Hose<br>Containment</h3>
+    <div class="mix exchanger-cleaning accessories" data-name="hms" data-designation="automated">
+      <a href="/hms" class="search-text">
+        <img src="/assets/img/product/hms-02.jpg" class="img-responsive" />
+        <h3>Hose Management System</h3>
         <h5>For AutoBox hose tractors</h5>
         <table class="table">
           <tbody>
@@ -319,7 +319,7 @@ permalink: /waterblast-tools-automated-equipment
             </tr>
             <tr>
               <th>Applications</th>
-              <td>1-lance, 2-lance, 3-lance tube and pipe cleaning</td>
+              <td>1-lance, 2-lance, 3-lance tube cleaning</td>
             </tr>
           </tbody>
         </table>
@@ -1920,19 +1920,18 @@ permalink: /waterblast-tools-automated-equipment
       </a>
     </div>
 
-    <div class="mix exchanger-cleaning accessories" data-name="hose-containment" data-designation="automated">
-      <a href="/hose-containment" class="search-text">
-        <img src="/assets/img/product/hcs-01.jpg" class="img-responsive" />
-        <h3>Hose<br>Containment</h3>
-        <h5>For AutoBox ABX-2L &amp; ABX-3L</h5>
+    <div class="mix exchanger-cleaning accessories" data-name="hms" data-designation="automated">
+      <a href="/hms" class="search-text">
+        <img src="/assets/img/product/hms-02.jpg" class="img-responsive" />
+        <h3>Hose Management System</h3>
+        <h5>For AutoBox hose tractors</h5>
         <table class="table">
           <tbody>
             <tr>
-              <th colspan="2" style="text-align:center;">Increases job safety by containing high pressure hose</th>
+              <th colspan="2" style="text-align:center;">Increases job safety</th>
             </tr>
             <tr>
-              <th>Capacity</th>
-              <td>84 ft 25 m at 6/4</td>
+              <th>Protects high pressure hose</th>
             </tr>
           </tbody>
         </table>
