--- a/loc-houston.html
+++ b/loc-houston.html
@@ -54,9 +54,9 @@ contact-houston: yes
             <a href="mailto:stephen.shivar@stoneagetools.com">stephen.shivar@stoneagetools.com</a></p>
           </div>
           <div class="col-sm-6">
-            <p><strong>Doug McGee</strong>
-            <br/>Automation Technician, Trainer<br/>
-              <a href="mailto:doug.mcgee@stoneagetools.com">doug.mcgee@stoneagetools.com</a></p>
+            <p><strong>Christian Lenoir</strong><br/>
+              Field Application Engineer<br/>
+            <a href="mailto:christian.lenoir@stoneagetools.com">christian.lenoir@stoneagetools.com</a></p>
           </div>
         </div>
         <div class="row">
@@ -69,6 +69,18 @@ contact-houston: yes
             <p><strong>Mike Rimmell</strong><br/>
               Rental, Repair and Automation (RRA) Technician<br/>
             <a href="mailto:mike.rimmell@stoneagetools.com">mike.rimmell@stoneagetools.com</a></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <p><strong>Doug McGee</strong>
+            <br/>Automation Technician, Trainer<br/>
+              <a href="mailto:doug.mcgee@stoneagetools.com">doug.mcgee@stoneagetools.com</a></p>
+          </div>
+          <div class="col-sm-6">
+            <p><strong>Frank G. Romito</strong><br/>
+              Senior Training Specialist<br/>
+            <a href="mailto:FrankG.Romito@StoneAgeTools.com">frankg.romito@stoneagetools.com</a></p>
           </div>
         </div>
         
