--- a/rotary-waterblast-tools/badger-6in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-6in-pipe-cleaning.html
@@ -378,7 +378,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading4">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                        <strong>BA 610-P8/M9</strong> Overhaul Kit for BA-P8/BA-M24/BA-MP9<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>BA 610-P8/MP9</strong> Overhaul Kit for BA-P8/BA-M24/BA-MP9<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
