--- a/waterblast-automation/lightweight-positioner.html
+++ b/waterblast-automation/lightweight-positioner.html
@@ -310,8 +310,8 @@ master-slider: yes
         <h5>Fin Fan Accessory</h5></a>
       </div>
       <div class="item">
-        <a href="/hose-containment"><img class="img-responsive" src="/assets/img/product/thumb-hcs-01.jpg" alt="Hose containment for exchanger cleaning">
-        <h5>Hose Containment System</h5></a>
+        <a href="/hose-containment"><img class="img-responsive" src="/assets/img/product/thumb-hcs-01.jpg" alt="hose management for exchanger cleaning">
+        <h5>hose management System</h5></a>
       </div>
     </div>
   </div>
