--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ landing: yes
 <!-- masterslider -->
 <div class="master-slider ms-skin-default" id="homeslider">
   
-  <!-- new slide
+  <!-- new slide -->
   <div class="ms-slide slide-4">
-    <img src="/assets/img/features/bg_blue_wwett22.jpg" data-src="/assets/img/features/bg_blue_wwett22.jpg" alt="StoneAge background"/> 
+    <img src="/assets/img/features/bg_gold_ifat22.jpg" data-src="/assets/img/features/bg_gold_ifat22.jpg" alt="StoneAge background"/> 
 
     <div class="ms-layer feature-h1" style="width:400px;"   
       data-effect="t(true,n,20,n,n,n,n,n,n,n,n,n,n,n,n)" 
@@ -24,7 +24,7 @@ landing: yes
       data-offset-x="150" 
       data-offset-y="-80" 
       data-origin="ml" 
-      data-position="normal"><span style="color:#00adef;letter-spacing:1px;font-size:130%;">WWETT 2022</span><br><span style="letter-spacing:1px;font-size:70%;">Visit us in Booth #6305</span>
+      data-position="normal"><span style="color:#d6ad4c;letter-spacing:1px;font-size:130%;">Hall C4, Booth 305</span><br><span style="letter-spacing:1px;font-size:70%;">Visis us at IFAT 2022</span>
     </div>
 
     <div class="ms-layer feature-h2" style="width:400px;"
@@ -36,21 +36,22 @@ landing: yes
       data-offset-y="10" 
       data-origin="ml" 
       data-position="normal"   
-         data-masked="true"><span style="font-weight:400; text-transform: none;">Haven’t secured your tickets yet?<br><strong style="color:#00adef;">No problem!</strong></span>
+         data-masked="true"><span style="font-weight:400; text-transform: none;">30 May - 3 June 2022, Munich</span>
     </div>
     
-    <img  class="ms-layer" src="/assets/img/features/wwett_2022_01.png" style="" 
-         data-src="/assets/img/features/wwett_2022_01.png" alt="WWETT 2022"
+    <img  class="ms-layer" src="/assets/img/features/ifat22.png" style="" 
+         data-src="/assets/img/features/ifat22.png" alt="IFAT 2022"
          data-effect="t(true,n,140,n,n,n,n,n,n,n,n,n,n,n,n)"   
          data-ease="easeOutQuint"       
          data-parallax="160" 
+         data-delay="1200" 
          data-type="image"          
          data-offset-x="0" 
-         data-offset-y="50" 
+         data-offset-y="180" 
          data-origin="tr" 
          data-position="normal" />
 
-    <a href="https://l.feathr.co/WWETT2022/Warthog-Nozzles-By-StoneAge-Inc" target="_blank" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
+    <a href="https://stoneagetools.com/ifat22" target="_blank" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
        data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
        data-duration="2400" 
        data-delay="1600" 
@@ -59,7 +60,7 @@ landing: yes
        data-offset-x="150" 
        data-offset-y="104" 
        data-origin="ml" 
-       data-position="normal">Get Your Pass
+       data-position="normal">More Info
     </a>
   </div>
   <!-- end of slide -->
@@ -286,7 +287,7 @@ landing: yes
   </div>
   <!-- end of slide -->
   
-  <!-- new slide -->
+  <!-- new slide
   <div class="ms-slide slide-4">
     <img src="/assets/img/features/bg_gold_gicc_vac.jpg" data-src="/assets/img/features/bg_gold_gicc_vac.jpg" alt="StoneAge background"/> 
 
